--- a/src/sdg/scss/components/_checkboxGroup.scss
+++ b/src/sdg/scss/components/_checkboxGroup.scss
@@ -44,6 +44,7 @@
   display: flex;
   color: token-value(color, red, regular);
   align-items: center;
+  @include content-font(md, bold);
 
   .qc-checkbox-invalid-icon {
     display: flex;
