--- a/src/sdg/scss/components/_checkbox.scss
+++ b/src/sdg/scss/components/_checkbox.scss
@@ -16,7 +16,6 @@
     display: flex;
     position: relative;
 
-    margin-right: token-value(spacer, xs);
     margin-top: 0;
     margin-left: 0;
 
@@ -81,7 +80,8 @@
     display: flex;
     align-items: end;
     cursor: pointer;
-    margin-right: token-value(spacer, xs);
+    padding-left: token-value(spacer, xs);
+    padding-right: token-value(spacer, xs);
     margin-bottom: 0;
     @include content-font(md);
   }
@@ -129,6 +129,7 @@
 
 .checkbox-single {
   padding-left: token-value(spacer, xs);
+  margin-bottom: token-value(spacer, sm);
 
   &.checkbox-single-invalid {
     box-shadow: rem(2) 0 token-value(color, red, regular) inset;
