--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1952,6 +1952,9 @@ qc-search-bar {
   display: flex;
   color: var(--qc-color-red-regular);
   margin-left: var(--qc-spacer-xs);
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
 }
 
 .qc-fieldset-invalid {
