2e correction de la graisse du span required de qc-radio-group (bold)

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1954,7 +1954,7 @@ qc-search-bar {
   margin-left: var(--qc-spacer-xs);
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-regular);
+  font-weight: var(--qc-font-weight-bold);
 }
 
 .qc-fieldset-invalid {
