--- a/src/sdg/scss/components/_checkboxGroup.scss
+++ b/src/sdg/scss/components/_checkboxGroup.scss
@@ -38,6 +38,7 @@
   display: flex;
   color: token-value(color, red, regular);
   margin-left: token-value(spacer, xs);
+  @include content-font(md, bold);
 }
 
 .qc-checkbox-invalid {
