--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -19,3 +19,7 @@
 @use "components/separator";
 @use "components/searchBar";
 @use "components/searchInput";
+@use "components/radioButton";
+@use "components/radioGroup";
+@use "components/checkbox";
+@use "components/checkboxGroup";
