--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1838,16 +1838,20 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-radio-md, .qc-radio-sm {
+.qc-radio-sm {
   display: flex;
   align-items: center;
   min-height: var(--qc-spacer-md);
   margin: 0;
+  padding: 0;
 }
-.qc-radio-md input[type=radio], .qc-radio-sm input[type=radio] {
-  -moz-appearance: none;
-       appearance: none;
+.qc-radio-sm input[type=radio] {
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-width: 1px;
   -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   cursor: pointer;
   display: flex;
   position: relative;
@@ -1857,39 +1861,37 @@ qc-search-bar {
   border-color: var(--qc-color-blue-dark);
   border-radius: 100%;
 }
-.qc-radio-md input[type=radio]::before, .qc-radio-sm input[type=radio]::before {
+.qc-radio-sm input[type=radio]::before {
   content: "";
   position: absolute;
   margin: auto;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
+  inset: 0;
   overflow: hidden;
   opacity: 0;
 }
-.qc-radio-md input[type=radio]:focus, .qc-radio-sm input[type=radio]:focus {
-  outline: 0.2rem solid var(--qc-color-blue-light);
+.qc-radio-sm input[type=radio]:focus {
+  outline: 2px solid var(--qc-color-blue-light);
   outline-offset: 0;
   border-color: var(--qc-color-blue-dark) !important;
+  border-width: 2px;
 }
-.qc-radio-md input[type=radio]:checked, .qc-radio-sm input[type=radio]:checked {
+.qc-radio-sm input[type=radio]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-radio-md input[type=radio]:checked::before, .qc-radio-sm input[type=radio]:checked::before {
+.qc-radio-sm input[type=radio]:checked::before {
   opacity: 1;
   border-radius: 100%;
   background-color: var(--qc-color-blue-regular);
 }
-.qc-radio-md input[type=radio]:disabled, .qc-radio-sm input[type=radio]:disabled {
+.qc-radio-sm input[type=radio]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-md input[type=radio]:disabled + label, .qc-radio-sm input[type=radio]:disabled + label {
+.qc-radio-sm input[type=radio]:disabled + label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-radio-md label, .qc-radio-sm label {
+.qc-radio-sm label {
   display: flex;
   align-items: end;
   cursor: pointer;
@@ -1900,21 +1902,74 @@ qc-search-bar {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
 }
-
-.qc-radio-sm input[type=radio] {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
-  border-width: 0.1rem;
-}
 .qc-radio-sm input[type=radio]::before {
   width: 1rem;
   height: 1rem;
 }
 
+.qc-radio-md {
+  display: flex;
+  align-items: center;
+  min-height: var(--qc-spacer-md);
+  margin: 0;
+  padding: 0;
+}
 .qc-radio-md input[type=radio] {
   width: var(--qc-spacer-md);
   height: var(--qc-spacer-md);
-  border-width: 0.2rem;
+  border-width: 2px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  margin: 0;
+  background-color: var(--qc-color-white);
+  border-style: solid;
+  border-color: var(--qc-color-blue-dark);
+  border-radius: 100%;
+}
+.qc-radio-md input[type=radio]::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  inset: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+.qc-radio-md input[type=radio]:focus {
+  outline: 2px solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+  border-width: 2px;
+}
+.qc-radio-md input[type=radio]:checked {
+  border-color: var(--qc-color-blue-regular);
+}
+.qc-radio-md input[type=radio]:checked::before {
+  opacity: 1;
+  border-radius: 100%;
+  background-color: var(--qc-color-blue-regular);
+}
+.qc-radio-md input[type=radio]:disabled {
+  cursor: not-allowed;
+  border-color: var(--qc-color-grey-light);
+}
+.qc-radio-md input[type=radio]:disabled + label {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.qc-radio-md label {
+  display: flex;
+  align-items: end;
+  cursor: pointer;
+  padding-left: var(--qc-spacer-xs);
+  padding-right: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
 }
 .qc-radio-md input[type=radio]::before {
   width: 1.4rem;
@@ -1925,12 +1980,9 @@ qc-search-bar {
   display: flex;
   flex-direction: column;
   border: none;
-  padding: 0.001em 0 0 0;
-  margin-left: var(--qc-spacer-xs);
-  margin-bottom: var(--qc-spacer-sm);
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-bold);
+  padding: 0;
+  margin-left: 0;
+  margin-bottom: var(--qc-spacer-content-block-mb);
 }
 
 .qc-checkbox-group-md, .qc-radio-group-md, .qc-checkbox-group-sm, .qc-radio-group-sm {
@@ -1941,6 +1993,9 @@ qc-search-bar {
 
 .qc-checkbox-legend, .qc-radio-legend {
   display: -webkit-box;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
 }
 
 .qc-checkbox-group-sm, .qc-radio-group-sm {
@@ -1962,65 +2017,14 @@ qc-search-bar {
   font-weight: var(--qc-font-weight-bold);
 }
 
-.qc-fieldset-invalid {
-  box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
+.checkbox-single.checkbox-single-invalid, .qc-fieldset-invalid {
+  box-shadow: -2px 0 var(--qc-color-red-regular);
+  padding-left: var(--qc-spacer-xs);
+  margin-left: -0.8rem;
 }
 
-.qc-checkbox-invalid, .qc-radio-invalid {
-  display: flex;
-  color: var(--qc-color-red-regular);
-  margin-top: var(--qc-spacer-sm);
-  align-items: center;
-}
-
-.qc-checkbox-invalid .qc-checkbox-invalid-icon, .qc-radio-invalid .qc-radio-invalid-icon {
-  display: flex;
-  align-items: center;
-  margin-right: var(--qc-spacer-xs);
-}
-
-.qc-checkbox-invalid.qc-checkbox-invalid-visible, .qc-radio-invalid.qc-radio-invalid-visible {
-  min-height: var(--qc-spacer-md);
-}
-
-.checkbox-md, .checkbox-sm {
-  display: flex;
-  align-items: center;
-  min-height: var(--qc-spacer-md);
-  margin: 0;
-  padding: 0;
-}
-.checkbox-md input[type=checkbox], .checkbox-sm input[type=checkbox] {
-  -moz-appearance: none;
-       appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-  display: flex;
-  position: relative;
-  margin-top: 0;
-  margin-left: 0;
-  background-color: var(--qc-color-white);
-  border-style: solid;
-  border-color: var(--qc-color-blue-dark);
-}
-.checkbox-md input[type=checkbox]::before, .checkbox-sm input[type=checkbox]::before {
-  content: "";
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  overflow: hidden;
-}
-.checkbox-md input[type=checkbox]:focus, .checkbox-sm input[type=checkbox]:focus {
-  outline: 0.2rem solid var(--qc-color-blue-light);
-  outline-offset: 0;
-  border-color: var(--qc-color-blue-dark) !important;
-}
 .checkbox-md input[type=checkbox]:checked, .checkbox-sm input[type=checkbox]:checked {
   background-color: var(--qc-color-blue-regular);
-  border-color: var(--qc-color-blue-regular);
 }
 .checkbox-md input[type=checkbox]:checked::after, .checkbox-sm input[type=checkbox]:checked::after {
   content: "";
@@ -2028,25 +2032,65 @@ qc-search-bar {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  mask-image: url("../../../../public/img/checkmark.svg");
-  -webkit-mask-image: url("../../../../public/img/checkmark.svg");
-  mask-size: contain;
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
+          mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
   -webkit-mask-size: contain;
-  mask-repeat: no-repeat;
+          mask-size: contain;
   -webkit-mask-repeat: no-repeat;
-  mask-position: center;
+          mask-repeat: no-repeat;
   -webkit-mask-position: center;
+          mask-position: center;
   background-color: var(--qc-color-white);
 }
-.checkbox-md input[type=checkbox]:disabled, .checkbox-sm input[type=checkbox]:disabled {
+
+.checkbox-sm {
+  display: flex;
+  align-items: center;
+  min-height: var(--qc-spacer-md);
+  margin: 0;
+  padding: 0;
+}
+.checkbox-sm input[type=checkbox] {
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-width: 1px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  margin: 0;
+  background-color: var(--qc-color-white);
+  border-style: solid;
+  border-color: var(--qc-color-blue-dark);
+}
+.checkbox-sm input[type=checkbox]::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  inset: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+.checkbox-sm input[type=checkbox]:focus {
+  outline: 2px solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+  border-width: 2px;
+}
+.checkbox-sm input[type=checkbox]:checked {
+  border-color: var(--qc-color-blue-regular);
+}
+.checkbox-sm input[type=checkbox]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.checkbox-md input[type=checkbox]:disabled + label, .checkbox-sm input[type=checkbox]:disabled + label {
+.checkbox-sm input[type=checkbox]:disabled + label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.checkbox-md label, .checkbox-sm label {
+.checkbox-sm label {
   display: flex;
   align-items: end;
   cursor: pointer;
@@ -2056,12 +2100,6 @@ qc-search-bar {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
-}
-
-.checkbox-sm input {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
-  border-width: 0.1rem;
 }
 .checkbox-sm input[type=checkbox]:checked::before {
   width: 0.8rem;
@@ -2077,10 +2115,63 @@ qc-search-bar {
   height: 1.2rem;
 }
 
-.checkbox-md input {
+.checkbox-md {
+  display: flex;
+  align-items: center;
+  min-height: var(--qc-spacer-md);
+  margin: 0;
+  padding: 0;
+}
+.checkbox-md input[type=checkbox] {
   width: var(--qc-spacer-md);
   height: var(--qc-spacer-md);
-  border-width: 0.2rem;
+  border-width: 2px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  margin: 0;
+  background-color: var(--qc-color-white);
+  border-style: solid;
+  border-color: var(--qc-color-blue-dark);
+}
+.checkbox-md input[type=checkbox]::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  inset: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+.checkbox-md input[type=checkbox]:focus {
+  outline: 2px solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+  border-width: 2px;
+}
+.checkbox-md input[type=checkbox]:checked {
+  border-color: var(--qc-color-blue-regular);
+}
+.checkbox-md input[type=checkbox]:disabled {
+  cursor: not-allowed;
+  border-color: var(--qc-color-grey-light);
+}
+.checkbox-md input[type=checkbox]:disabled + label {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.checkbox-md label {
+  display: flex;
+  align-items: end;
+  cursor: pointer;
+  padding-left: var(--qc-spacer-xs);
+  padding-right: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
 }
 .checkbox-md input[type=checkbox]:checked::before {
   width: 1.2rem;
@@ -2097,11 +2188,21 @@ qc-search-bar {
 }
 
 .checkbox-single {
-  padding-left: var(--qc-spacer-xs);
-  margin-bottom: var(--qc-spacer-sm);
+  margin-bottom: var(--qc-spacer-content-block-mb);
 }
-.checkbox-single.checkbox-single-invalid {
-  box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
+.qc-form-error {
+  display: flex;
+  color: var(--qc-color-red-regular);
+  margin-top: var(--qc-spacer-sm);
+  align-items: center;
+  font-weight: var(--qc-font-weight-bold);
+}
+.qc-form-error .qc-icon {
+  display: flex;
+  align-items: center;
+  margin-right: var(--qc-spacer-xs);
+  --error-icon-width: 2.4rem!important;
+  --error-icon-height: 2.1rem!important;
 }
 
 .qc-container,
