--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2023,17 +2023,17 @@ qc-search-bar {
   margin-left: -0.8rem;
 }
 
-.qc-radio-tile-md {
+.qc-radio-tile {
   display: flex;
   align-items: center;
   min-height: var(--qc-spacer-md);
   margin: 0;
   padding: 0;
 }
-.qc-radio-tile-md input[type=radio] {
-  min-width: var(--qc-spacer-md);
-  min-height: var(--qc-spacer-md);
-  border-width: 2px;
+.qc-radio-tile input[type=radio] {
+  min-width: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-sm);
+  border-width: 1px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -2046,7 +2046,7 @@ qc-search-bar {
   border-color: var(--qc-color-blue-dark);
   border-radius: 100%;
 }
-.qc-radio-tile-md input[type=radio]::before {
+.qc-radio-tile input[type=radio]::before {
   content: "";
   position: absolute;
   margin: auto;
@@ -2054,29 +2054,29 @@ qc-search-bar {
   overflow: hidden;
   opacity: 0;
 }
-.qc-radio-tile-md input[type=radio]:focus {
+.qc-radio-tile input[type=radio]:focus {
   outline: 2px solid var(--qc-color-blue-light);
   outline-offset: 0;
   border-color: var(--qc-color-blue-dark) !important;
   border-width: 2px;
 }
-.qc-radio-tile-md input[type=radio]:checked {
+.qc-radio-tile input[type=radio]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-radio-tile-md input[type=radio]:checked::before {
+.qc-radio-tile input[type=radio]:checked::before {
   opacity: 1;
   border-radius: 100%;
   background-color: var(--qc-color-blue-regular);
 }
-.qc-radio-tile-md input[type=radio]:disabled {
+.qc-radio-tile input[type=radio]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-tile-md input[type=radio]:disabled + label {
+.qc-radio-tile input[type=radio]:disabled + label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-radio-tile-md label {
+.qc-radio-tile label {
   display: flex;
   align-items: end;
   cursor: pointer;
@@ -2087,14 +2087,16 @@ qc-search-bar {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
 }
-.qc-radio-tile-md label {
+.qc-radio-tile label {
+  display: flex;
+  align-items: start !important;
   padding: var(--qc-spacer-sm);
   position: relative;
   z-index: 10;
   background: transparent;
   border: 0;
 }
-.qc-radio-tile-md label::before {
+.qc-radio-tile label::before {
   position: absolute;
   display: block;
   content: "";
@@ -2102,34 +2104,33 @@ qc-search-bar {
   inset: 0;
   z-index: -5;
 }
-.qc-radio-tile-md label:has(input:focus), .qc-radio-tile-md label:focus {
+.qc-radio-tile label:has(input:focus), .qc-radio-tile label:focus {
   outline: 2px solid var(--qc-color-formfield-focus-outline);
 }
-.qc-radio-tile-md label:has(input:focus)::before, .qc-radio-tile-md label:focus::before {
+.qc-radio-tile label:has(input:focus)::before, .qc-radio-tile label:focus::before {
   border: 2px solid var(--qc-color-formfield-focus-border);
 }
-.qc-radio-tile-md label::before {
+.qc-radio-tile label::before {
   border-style: solid;
   border-width: 0.1rem;
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-tile-md label:hover::before {
+.qc-radio-tile label:hover::before {
   border-color: var(--qc-color-blue-light);
 }
-.qc-radio-tile-md label:checked::before {
+.qc-radio-tile label:has(input:checked)::before {
   background-color: var(--qc-color-blue-pale) !important;
 }
-.qc-radio-tile-md input[type=radio] {
+.qc-radio-tile input[type=radio] {
   margin-right: var(--qc-spacer-xs);
+  margin-top: 0.4rem;
 }
-.qc-radio-tile-md input[type=radio]::before {
-  width: 1.4rem;
-  height: 1.4rem;
+.qc-radio-tile input[type=radio]::before {
+  width: 1rem;
+  height: 1rem;
 }
-
-.qc-radio-tile-label {
-  display: flex;
-  align-items: start !important;
+.qc-radio-tile input[type=radio]:focus::before {
+  outline: none !important;
 }
 
 .qc-radio-tile-label-span {
