Correction de l'adaptation de taille des boutons de selection dans la grille

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2023,12 +2023,52 @@ qc-search-bar {
   margin-left: -0.8rem;
 }
 
+.qc-radio-group-tiles-column, .qc-radio-group-tiles-row {
+  display: inline-grid;
+  margin-top: var(--qc-spacer-md);
+}
+
+.qc-radio-group-tiles-row {
+  grid-auto-flow: column;
+}
+
+.qc-radio-group-tiles-column {
+  grid-auto-flow: row;
+}
+
+.qc-radio-group-tiles-row qc-radio-tile {
+  margin-right: var(--qc-spacer-xs);
+}
+.qc-radio-group-tiles-row qc-radio-tile:last-child {
+  margin: 0;
+}
+
+.qc-radio-group-tiles-column qc-radio-tile {
+  margin-bottom: var(--qc-spacer-xs);
+}
+.qc-radio-group-tiles-column qc-radio-tile:last-child {
+  margin: 0;
+}
+
+.qc-radio-tile-parent {
+  display: flex;
+  flex-grow: 1;
+}
+
 .qc-radio-tile {
   display: flex;
   align-items: center;
   min-height: var(--qc-spacer-md);
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: start !important;
+  flex-grow: 1;
+  padding: var(--qc-spacer-sm);
+  position: relative;
+  z-index: 10;
+  background: transparent;
+  border: 0;
 }
 .qc-radio-tile input[type=radio] {
   min-width: var(--qc-spacer-sm);
@@ -2087,16 +2127,7 @@ qc-search-bar {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
 }
-.qc-radio-tile label {
-  display: flex;
-  align-items: start !important;
-  padding: var(--qc-spacer-sm);
-  position: relative;
-  z-index: 10;
-  background: transparent;
-  border: 0;
-}
-.qc-radio-tile label::before {
+.qc-radio-tile::before {
   position: absolute;
   display: block;
   content: "";
@@ -2104,21 +2135,21 @@ qc-search-bar {
   inset: 0;
   z-index: -5;
 }
-.qc-radio-tile label:has(input:focus), .qc-radio-tile label:focus {
+.qc-radio-tile:has(input:focus), .qc-radio-tile:focus {
   outline: 2px solid var(--qc-color-formfield-focus-outline);
 }
-.qc-radio-tile label:has(input:focus)::before, .qc-radio-tile label:focus::before {
+.qc-radio-tile:has(input:focus)::before, .qc-radio-tile:focus::before {
   border: 2px solid var(--qc-color-formfield-focus-border);
 }
-.qc-radio-tile label::before {
+.qc-radio-tile::before {
   border-style: solid;
   border-width: 0.1rem;
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-tile label:hover::before {
+.qc-radio-tile:hover::before {
   border-color: var(--qc-color-blue-light);
 }
-.qc-radio-tile label:has(input:checked)::before {
+.qc-radio-tile:has(input:checked)::before {
   background-color: var(--qc-color-blue-pale) !important;
 }
 .qc-radio-tile input[type=radio] {
@@ -2319,6 +2350,20 @@ qc-search-bar {
 .checkbox-single {
   margin-bottom: var(--qc-spacer-content-block-mb);
 }
+.qc-radio-group-tiles-row qc-radio-tile {
+  margin-right: var(--qc-spacer-xs);
+}
+.qc-radio-group-tiles-row qc-radio-tile:last-child {
+  margin: 0;
+}
+
+.qc-radio-group-tiles-column qc-radio-tile {
+  margin-bottom: var(--qc-spacer-xs);
+}
+.qc-radio-group-tiles-column qc-radio-tile:last-child {
+  margin: 0;
+}
+
 .qc-form-error {
   display: flex;
   color: var(--qc-color-red-regular);
