--- a/src/sdg/scss/components/_radioTile.scss
+++ b/src/sdg/scss/components/_radioTile.scss
@@ -1,29 +1,33 @@
 @use "qc-sdg-lib" as *;
 @use "checkMixin" as *;
 
+.qc-radio-tile-parent {
+  display: flex;
+  flex-grow: 1;
+}
+
 .qc-radio-tile {
   @include check-style(radio, sm);
 
-  label {
-    display: flex;
-    align-items: start !important;
+  display: flex;
+  align-items: start !important;
+  flex-grow: 1;
 
-    padding: token-value(spacer, sm);
-    @include qc-formcontrol-box();
+  padding: token-value(spacer, sm);
+  @include qc-formcontrol-box();
 
-    &::before {
-      border-style: solid;
-      border-width: rem(1);
-      border-color: token-value(color, grey, light);
-    }
+  &::before {
+    border-style: solid;
+    border-width: rem(1);
+    border-color: token-value(color, grey, light);
+  }
 
-    &:hover::before {
-      border-color: token-value(color, blue, light);
-    }
+  &:hover::before {
+    border-color: token-value(color, blue, light);
+  }
 
-    &:has(input:checked)::before {
-      background-color: token-value(color, blue, pale) !important;
-    }
+  &:has(input:checked)::before {
+    background-color: token-value(color, blue, pale) !important;
   }
 
   input[type=radio] {
