--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2021,25 +2021,26 @@ qc-search-bar {
   margin-left: -0.8rem;
 }
 
-.qc-radio-group-tiles-column, .qc-radio-group-tiles-row {
+.qc-checkbox-group-tiles-column, .qc-radio-group-tiles-column, .qc-checkbox-group-tiles-row, .qc-radio-group-tiles-row {
   display: inline-grid;
   margin-top: var(--qc-spacer-md);
+  grid-gap: var(--qc-spacer-xs);
 }
 
-.qc-radio-group-tiles-row {
-  grid-auto-flow: column;
-}
-
-.qc-radio-group-tiles-column {
+.qc-checkbox-group-tiles-row, .qc-radio-group-tiles-row {
   grid-auto-flow: row;
 }
 
+.qc-checkbox-group-tiles-column, .qc-radio-group-tiles-column {
+  grid-auto-flow: column;
+}
+
 .qc-radio-group-tiles-row {
-  grid-gap: var(--qc-spacer-xs);
+  grid-template-columns: repeat(var(--elementsPerRowOrCol), 1fr);
 }
 
 .qc-radio-group-tiles-column {
-  grid-gap: var(--qc-spacer-xs);
+  grid-template-rows: repeat(var(--elementsPerRowOrCol), 1fr);
 }
 
 .qc-radio-tile-parent {
@@ -2348,12 +2349,12 @@ qc-search-bar {
 .checkbox-single {
   margin-bottom: var(--qc-spacer-content-block-mb);
 }
-.qc-radio-group-tiles-row {
-  grid-gap: var(--qc-spacer-xs);
+.qc-checkbox-group-tiles-row {
+  grid-template-columns: repeat(var(--elementsPerRowOrCol), 1fr);
 }
 
-.qc-radio-group-tiles-column {
-  grid-gap: var(--qc-spacer-xs);
+.qc-checkbox-group-tiles-column {
+  grid-template-rows: repeat(var(--elementsPerRowOrCol), 1fr);
 }
 
 .qc-form-error {
